aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__call__tests__call_address.snap
---
source: aya-assembly/src/parser/instructions/call.rs
expression: result
---
Instruction(
    CallLit(
        Address(
            ByteOffset {
                start: 8,
                end: 12,
            },
        ),
    ),
)
