aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__call__tests__call_address_expr.snap
---
source: aya-assembly/src/parser/instructions/call.rs
expression: result
---
Instruction(
    Call(
        Address(
            BinaryOp {
                lhs: HexLiteral(
                    ByteOffset {
                        start: 8,
                        end: 12,
                    },
                ),
                operator: Add,
                rhs: Register(
                    ByteOffset {
                        start: 15,
                        end: 17,
                    },
                ),
            },
        ),
    ),
)
