aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__call__tests__call_address_expr_var.snap
---
source: aya-assembly/src/parser/instructions/call.rs
expression: result
---
Instruction(
    Call(
        Address(
            BinaryOp {
                lhs: Var(
                    ByteOffset {
                        start: 8,
                        end: 11,
                    },
                ),
                operator: Add,
                rhs: Register(
                    ByteOffset {
                        start: 14,
                        end: 16,
                    },
                ),
            },
        ),
    ),
)
