aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__call__tests__call_address_var.snap
---
source: aya-assembly/src/parser/instructions/call.rs
expression: result
---
Instruction(
    Call(
        Address(
            Var(
                ByteOffset {
                    start: 8,
                    end: 11,
                },
            ),
        ),
    ),
)
